--- a/app/views/organization/editmedia.html
+++ b/app/views/organization/editmedia.html
@@ -4,7 +4,7 @@
               <li class="active">{{'label.media.editmedia' | translate}}</li>
           </ul>
       </div>
-      <form class="form-horizontal well" ng-controller="EditMediaController" ng-submit="submit()">
+      <form class="form-horizontal well" name="editmediaform" novalidate="" ng-controller="EditMediaController" ng-submit="submit()">
        <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
 		<label ng-show="errorStatus">{{errorStatus}}</label>
@@ -26,7 +26,8 @@
           <div class="control-group">
             <label class="control-label" for="contentProvider">{{ 'label.media.contentprovider' | translate }}</label>
             <div class="controls">
-            <input type="text" id="contentProvider" ng-model="formData.contentProvider">
+            <input type="text" id="contentProvider" ng-model="formData.contentProvider"> 
+         <!--   <select   id="contentProvider" ng-model="formData.contentProvider" ng-options="contentProviderData.id as contentProviderData.mCodeValue for contentProviderData in contentProviderDatas " value="{{contentProviderData.id}}"></select> -->
             </div>
           </div>
           </td>
@@ -36,7 +37,7 @@
           <div class="control-group">
             <label class="control-label" for="mediaType">{{ 'label.media.mediaType' | translate }}</label>
             <div class="controls">
-               <select ng-model="formData.mediatype"  ng-options="mediaTypeData.id as mediaTypeData.value for mediaTypeData in mediaTypeDatas" value="{{mediaTypeData.mediatype}}"></select>
+               <select ng-model="formData.mediatype" id="mediatype" ng-options="mediaTypeData.id as mediaTypeData.value for mediaTypeData in mediaTypeDatas" value="{{mediaTypeData.mediatype}}"></select>
             </div>
           </div>
           </td>
@@ -55,34 +56,38 @@
           <div class="control-group">
             <label class="control-label" for="mediaCategoryId">{{ 'label.media.categeory' | translate }}</label>
             <div class="controls">
-              <select ng-model="formData.catageoryId"  ng-options="mediaCategeorydata.id as mediaCategeorydata.mCodeValue for mediaCategeorydata in mediaCategeorydatas" value="{{mediaCategeorydata.id}}"></select>
+              <select ng-model="formData.catageoryId" id="catageoryId" ng-options="mediaCategeorydata.id as mediaCategeorydata.mCodeValue for mediaCategeorydata in mediaCategeorydatas" value="{{mediaCategeorydata.id}}"></select>
             </div>
           </div>
           </td>
             
                <td width="50%">
           <div class="control-group">
-            <label class="control-label" for="rating">{{ 'label.media.rating' | translate }}</label>
-            <div class="controls">
-           <input type="text" id="rating" ng-model="formData.rating">
-            </div>
+            <label class="control-label" for="mediaRating">{{ 'label.media.rating' | translate }}</label>
+           <div class="controls">
+           <input type="text" id="mediaRating" name="mediaRating" ng-model="formData.mediaRating">
+           <!-- 	<div ng-show="editmediaform.mediaRating.$dirty &&      editmediaform.mediaRating.$invalid">
+               <span class="error" ng-show="editmediaform.mediaRating.$error.pattern">digits only !</span>
+               <span class="error" ng-show="editmediaform.mediaRating.$error.maxlength">Exceeded max limit!</span>
+            </div> -->
+          </div>
           </div>
           </td>
             </tr>
             <tr>
              <td>
           <div class="control-group">
-            <label class="control-label" for="image">{{ 'label.media.poster' | translate }}</label>
+            <label class="control-label" for="mediaImage">{{ 'label.media.poster' | translate }}</label>
             <div class="controls">
-            <input type="text" id="image" ng-model="formData.mediaImage">
+            <input type="text" id="mediaImage" ng-model="formData.mediaImage">
             </div>
           </div>
           </td>
           <td>
           <div class="control-group">
-            <label class="control-label" for="endDate">{{ 'label.media.status' | translate }}</label>
+            <label class="control-label" for="status">{{ 'label.media.status' | translate }}</label>
             <div class="controls">
-           <select ng-model="formData.status"  ng-options="mediaStatus.value as mediaStatus.value for mediaStatus in mediaStatus" value="{{mediaStatus.value}}"></select>
+           <select ng-model="formData.status" id="status" ng-options="mediaStatus.value as mediaStatus.value for mediaStatus in mediaStatus" value="{{mediaStatus.value}}"></select>
             </div>
           </div>
           </td>
@@ -125,9 +130,9 @@
           </tr>
           </table>
            
-             <table>
+             <table width="100%">
             <tr>
-              <td> 
+              <td width="50%"> 
               
         <div class="control-group">
 			<label class="control-label" for="overview">{{'label.media.overview' | translate}}</label>
@@ -135,12 +140,20 @@
 				<textarea rows="2" cols="2" ng-model="formData.overview"></textarea>
 			</div>
 		</div>     
-        
                 </td>
-                <td>
-                
-           
-             </td>
+          <!--   <td width="50%">
+            <div class="control-group">
+			    <label class="control-label" for="cpShareValue">Share(%)</label>
+			  <div class="controls">
+				<input type="text" id="cpShareValue" name="cpShareValue" ng-model="formData.cpShareValue"  ng-pattern="/^\d{0,2}(\.\d{0,2})?$/"  ng-maxlength="5"></input>
+				<div ng-show="editmediaform.cpShareValue.$dirty && editmediaform.cpShareValue.$invalid">
+               <span class="error" ng-show="editmediaform.cpShareValue.$error.pattern">Numbers below 100 only !</span>
+               <span class="error" ng-show="editmediaform.cpShareValue.$error.maxlength">Exceeded max limit!</span>
+           </div>
+			</div>
+		</div> 
+             </td>         -->
+                        
          </tr>
          </table>
          <table>
