--- a/app/views/system/createIpPooling.html
+++ b/app/views/system/createIpPooling.html
@@ -1,6 +1,6 @@
       <div>
         <ul class="breadcrumb">
-              <li><a href="#/media">{{'label.media' | translate}}</a> <span class="divider">/</span></li>
+              <li><a href="#/ipPooling">{{'label.manageippooling' | translate}}</a> <span class="divider">/</span></li>
               <li class="active">{{'label.ippooling.createippool' | translate}}</li>
           </ul>
       </div>
@@ -50,7 +50,7 @@
 		</table>
 
 		<div class="offset3">
-            <a href="#/media"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+            <a href="#/ipPooling"><button id="cancel" type="reset" class="btn">Cancel</button></a>
             <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
