--- a/app/views/system/ipPooling.html
+++ b/app/views/system/ipPooling.html
@@ -4,17 +4,33 @@
         <li class="active">{{'label.manageippooling' | translate}}</li>
     </ul>
 </div>
+
+
+<div ng-controller="IpPoolingController">
+
+<div class="pull-left">
+ <select ng-model="formData.source" ng-change="changeSource(formData.source)">
+              <option value="all">All</option>
+              <option value="I">Intermediate</option>
+              <option value="F">Free</option>
+              <option value="A">Allocated</option>
+              <option value="B">Blocked</option>
+          </select>
+          </div>
 <div class="pull-right">
         <a href="#/createippooling" class="btn btn-primary"><i class="icon-plus icon-white"></i> Create IpPooling</a>
 </div>
-
-<div ng-controller="IpPoolingController">
  
    <!--  <div>
       <tabset  style="margin-bottom: 0px;">
       
       <tab heading="All" select="getIpPooling()">
-        <div class="row-fluid"> -->                
+        <div class="row-fluid"> --> 
+         <div class="pull-right" style = "margin-top : 10px;">
+       <div class="control-group">
+            <!-- <label class="control-label" for="status">{{ 'label.paymentgateway.source' | translate }}</label> -->
+            </div>
+          </div>               
            <form ng-submit="searchIpPool(filterText)">
                <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
            </form>
@@ -25,7 +41,9 @@
                 <th>{{'table.ippooling.ipaddress' | translate}}</th>  
                 <th>{{'table.ippooling.ippooldescription' | translate}}</th>
                 <th>{{'table.ippooling.clientId' | translate}}</th>
+                <th>{{'table.ippooling.clientname' | translate}}</th>
                 <th>{{'table.ippooling.status' | translate}}</th>
+                <th>{{'table.ippooling.notes' | translate}}</th>
                 <th>&nbsp;</th>          
               </tr>
             </thead>
@@ -36,7 +54,9 @@
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.ipAddress}}</td> 
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.ipPoolDescription}}</td>
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.clientId}}</td>
-                <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.status}}</td>                                     
+                <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.clientName}}</td>  
+                <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.status}}</td>  
+                <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.notes}}</td>                                     
 
                <!--  <td><a ng-click="edit(paymentgatewaydata.id)" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a></td>        -->
 
