--- a/app/views/system/ipPooling.html
+++ b/app/views/system/ipPooling.html
@@ -44,12 +44,12 @@
                 <th>{{'table.ippooling.clientname' | translate}}</th>
                 <th>{{'table.ippooling.status' | translate}}</th>
                 <th>{{'table.ippooling.notes' | translate}}</th>
-                <th>&nbsp;</th>          
+                 <th>&nbsp;</th>           
               </tr>
             </thead>
             <tbody>
             <!--  -->
-             <tr class="pointer-main" ng-repeat="ippoolingdata in ippoolingdatas.currentPageItems  | filter:filterText">         
+             <tr class="pointer-main" ng-repeat="ippoolingdata in ippoolingdatas.currentPageItems ">         
 
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.id}}</td>
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.ipAddress}}</td> 
@@ -58,7 +58,7 @@
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.clientName}}</td>  
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.status}}</td>  
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.notes}}</td>                                     
-                 <td><a href="#/editippolling/{{ippoolingdata.id}}" ng-show="ippoolingdata.status =='I'" style='color:#000000' popover="Edit" popover-trigger="mouseenter" ><i class="icon-edit"></i></a></td>                                   
+              <td><a href="#/editippolling/{{ippoolingdata.id}}" ng-show="ippoolingdata.status =='Intermediate'" style='color:#000000' popover="Edit" popover-trigger="mouseenter" ><i class="icon-edit"></i></a></td>                                   
    			</tr>
      		 </tbody>
           </table>
