--- a/app/views/crm/tickets/closeTicket.html
+++ b/app/views/crm/tickets/closeTicket.html
@@ -50,9 +50,9 @@
 		</ul>
 		<ul class="breadcrumb">
 		     <li><a href="#/clients">{{'link.clients' | translate}}</a> <span class="divider">/</span></li>
-	        <li><a href="#/tickets/{{clientId}}">{{'label.ticket' | translate}}</a> <span class="divider">/</span></li>
-			<li><a href="#/viewTicket/{{clientId}}/{{ticketId}}">{{'label.viewticket' |
-					translate}}</a> <span class="divider">/</span></li>
+	        <li><a href="#/viewclient/{{clientId}}" ng-click="reset123()">{{'label.ticket' | translate}}</a> <span class="divider">/</span></li>
+			<!-- <li><a href="#/viewTicket/{{clientId}}/{{ticketId}}">{{'label.viewticket' |
+					translate}}</a> <span class="divider">/</span></li> -->
 			<li class="active">{{'label.closeticket' | translate}}</li>
 		</ul>
 	</div>
@@ -93,7 +93,7 @@
 		</table>
 		
 		<div class="offset3">
-			<a href="#/viewTicket/{{clientId}}/{{ticketId}}"><button type="reset" class="btn">Cancel</button></a>
+			<a href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">Cancel</button></a>
 			<button type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
