--- a/app/views/crm/tickets/viewTicket.html
+++ b/app/views/crm/tickets/viewTicket.html
@@ -72,7 +72,7 @@
  </ul>
 		<ul class="breadcrumb">
 			<li><a href="#/clients">{{'link.clients' | translate}}</a> <span class="divider">/</span></li>
-			<li><a href="#/viewclient/{{clientId}}">{{'link.view.client' | translate}}</a> <span class="divider">/</span></li>
+			<li><a href="#/viewclient/{{clientId}}" ng-click="reset123()">{{'link.view.client' | translate}}</a> <span class="divider">/</span></li>
 			  <li class="active">{{'label.viewticket' | translate}}</li>
 		</ul>
 	</div>
@@ -80,7 +80,7 @@
 		
 	    <div class="pull-right">
 	      <div class="btn-group">
-	          <a href="#/editTicket/{{clientId}}/{{ticket.id}}" ng-show="(ticket.status == 'OPEN')&&(PermissionService.showMenu('UPDATE_TICKET'))" class="btn btn-primary"><i class="icon-edit icon-white"></i> FollowUp</a>	        
+	          <a href="#/editTicket/{{clientId}}/{{ticket.id}}" ng-show="(ticket.status == 'OPEN')&&(PermissionService.showMenu('UPDATE_TICKET'))" class="btn btn-primary"><i class="icon-edit icon-white"></i> Comment</a>	        
 	          <a href="#/closeTicket/{{clientId}}/{{ticket.id}}" ng-show="(ticket.status == 'OPEN')&&(PermissionService.showMenu('CLOSE_TICKET'))" class="btn btn-primary"><i class="icon-trash icon-white"></i> Close</a>
 	      </div>
 	    </div>
@@ -100,6 +100,14 @@
                             <tr>
                               <td>{{ 'label.ticket.ticketdate' | translate }}</td>
                               <td>{{ticket.ticketDate | DateFormat}}</td>
+                            </tr>
+                             <tr>
+                              <td>{{ 'label.ticket.duedate' | translate }}</td>
+                              <td>{{ticket.dueDate}}</td>
+                            </tr>
+                             <tr>
+                              <td>{{ 'label.source' | translate }}</td>
+                              <td>{{ticket.sourceOfTicket}}</td>
                             </tr>
                             <tr>
                               <td>{{ 'label.ticket.problemcode' | translate}}</td>
