cug field added in edit client

--- a/app/views/clients/editclient.html
+++ b/app/views/clients/editclient.html
@@ -100,7 +100,7 @@
               </div>
               </td>
             </tr>
-            
+             
              <tr>
               <td>
               <div class="control-group">
@@ -110,6 +110,17 @@
                 </select>
                 </div>
               </div>
+              </td>
+            </tr>
+            
+              <tr>
+              <td>
+              		<div class="control-group">
+              		<label class="control-label">CUG</label>
+              		<div class="controls">
+                	<select ng-model="groupName"  ng-options="groupNameData.groupName as groupNameData.groupName for groupNameData in groupNameDatas" value="{{groupNameDatas.groupName}}"></select>
+              		</div>
+            		</div>
               </td>
             </tr>
             
