--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -25,7 +25,8 @@
               </div>
             </div>
   		      <div class="control-group">
-              <label class="control-label" for="firstname">{{'label.firstname' | translate}}<span class="required">*</span></label>
+              <label ng-hide="type == 'corporate'" class="control-label" for="firstname">{{'label.firstname' | translate}}<span class="required">*</span></label>
+              <label ng-show="type == 'corporate'" class="control-label" for="firstname">{{'label.corporate' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <input type="text" id="firstname" name="firstname" ng-model="formData.firstname" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
                 <span  ng-show="createclientform.firstname.$invalid">
@@ -38,13 +39,15 @@
               </div>
             </div>
             <div class="control-group">
-              <label class="control-label" for="middlename">{{'label.middlename' | translate}}</label>
+              <label ng-hide="type == 'corporate'" class="control-label" for="middlename">{{'label.middlename' | translate}}</label>
+              <label ng-show="type == 'corporate'" class="control-label" for="firstname">{{'label.corporatedetails' | translate}}</label>
               <div class="controls">
                 <input type="text" id="middlename" ng-model="formData.middlename"/>
               </div>
             </div>
             <div class="control-group">
-              <label class="control-label" for="lastname">{{'label.lastname' | translate}}<span class="required">*</span></label></label>
+              <label ng-hide="type == 'corporate'" class="control-label" for="lastname">{{'label.lastname' | translate}}<span class="required">*</span></label>
+              <label ng-show="type == 'corporate'" class="control-label" for="firstname">{{'label.contactperson' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <input type="text" id="lastname" name="lastname" ng-model="formData.lastname" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
                 <span  ng-show="createclientform.lastname.$invalid">
@@ -95,20 +98,23 @@
                 <input type="text" id="login" name="login" ng-model="formData.login"/>
               </div>
             </div>
-            
-            <div class="control-group">
-              <label class="control-label" for="file">{{'label.client.select.image' | translate}}</label>
-              <div class="controls">
-                <input type="file" ng-file-select="onFileSelect($files)">
-              </div>
-            </div>
+          
            </td>
            <td>
-
+            <div class="control-group">
+              <div class="controls">
+               <input type="radio" id="type" ng-model="type" name="entryType" value="individual">
+               &nbsp; Individual &nbsp;&nbsp;
+               <input type="radio" id="type" ng-model="type" name="entryType" value="corporate">
+               &nbsp; Corporate
+              </div>
+            </div>
             <div class="control-group">
               <label class="control-label">CUG</span></label>
               <div class="controls">
-                <select ng-model="formData.groupName"  ng-options="groupNameData.groupName as groupNameData.groupName for groupNameData in groupNameDatas" value="{{groupNameDatas.groupName}}"></select>
+                <select ng-model="formData.groupName"  ng-options="groupNameData.groupName as groupNameData.groupName for groupNameData in groupNameDatas" value="{{groupNameDatas.groupName}}">
+                <option  value="">None</option>
+                </select>
               </div>
             </div>
 
@@ -168,11 +174,23 @@
             </div>
            </td>
            </tr>
-           </table> 
+           <tr>
+             <td>
+            <div class="control-group">
+              <label class="control-label" for="file">{{'label.client.select.image' | translate}}</label>
+              <div class="controls">
+                <input type="file" ng-file-select="onFileSelect($files)">
+              </div>
+            </div>
+            </td>
+             <td>
             <div class="pull-right">
               <a href="#/clients"><button id="cancel" type="reset" class="btn">Cancel</button></a>
               <!-- <button id="submit" type="submit"  ng-dblclick="dbClick()" ng-disabled="(!createclientform.$valid)||(flag)" class="btn btn-primary">Save</button> -->
               <button id="submit" type="submit" ng-disabled="!createclientform.$valid" class="btn btn-primary">Save</button>
             </div>
+            </td>
+           </tr>
+           </table>
         </fieldset>
       </form>
